# pytorch_concepts

./: .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTOR_GUIDE.md  MANIFEST.in  NOTICE  README.md  README.rst  SECURITY.md  codecov.yml  datamodule_test.py  fast_test.py  pyproject.toml  requirements.txt  run_docstrings.py  setup.cfg  setup.py  test_new_datamodules.py  test_new_datasets_visual.py
conceptarium/: README.md  env.py  environment.yaml  environment_silicon.yaml  environment_steerling.yaml  environment_steerling_copy.yaml  environment_steerling_silicon.yaml  experiment.py  run_analysis.py  run_experiment.py  visualize.py
doc/: Makefile  conf.py  contributor_guide.rst  index.rst  user_guide.rst
examples/: autoregressive_concept_encoder.py  concept_bottleneck_model.py  concept_embedding_model.py  model_example.py
experiments/: experiment_summaries.py  experiment_utils.py  mnist_addition.py  mnist_addition_partial_concepts.py  mnist_even_odd.py  run_experiment.py  toy.py  utils.py
tests/: test_annotations.py  test_annotations_comprehensive.py  test_annotations_extended.py  test_backbone_comprehensive.py  test_backbone_extended.py  test_base.py  test_base_nn.py  test_base_objects.py  test_bottleneck.py  test_concept.py  test_concept_graph.py  test_cpd_extra.py  test_data.py  test_data_utils.py  test_data_utils_extended.py  test_encode.py  test_forward_inference_advanced_coverage.py  test_forward_inference_comprehensive.py  test_forward_inference_coverage.py  test_forward_inference_extended.py  test_io.py  (+34 more)
(+730 files in other folders)
